--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.5.2
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
+dj-database-url==0.5.0
 Django==4.0.5
+django-on-heroku==1.1.2
 django-restframework==0.0.1
 djangorestframework==3.13.1
 idna==3.3
+psycopg2-binary==2.9.3
 pytz==2022.1
 requests==2.27.1
 sqlparse==0.4.2
